src/objects/Account_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Express_Multiplier__c</fullName>
        <label>Express Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proofreading_Multiplier__c</fullName>
        <label>Proofreading Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Char_Price__c</fullName>
        <label>Source Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Account_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Word_Price__c</fullName>
        <label>Source Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Char_Price__c</fullName>
        <label>Target Char Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>Account_Pricing1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Word_Price__c</fullName>
        <label>Target Word Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent_Multiplier__c</fullName>
        <label>Urgent Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Egyedi díjszabás</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>